*** Changes since AVR-LibC-2.2.0:

* General:

* Improvements and additions:

  - common/asmdef.h used a sub-optimal definition of XJMP and XCALL (#993).
    Outcome was a sub-optimal code generation for some devices like the
    ones in avrxmega3/short-calls.

  - Improve runtime performance of free() (Request #991).

  - Support the ISR_N macro in avr/interrupt.h.  This allows to specify the
    IRQ number as an argument to the signal attribute, which is supported
    since GCC v15 PR116056.  It allows to use static functions or functions
    defined in a C++ namespace as an ISR.   It also allows to define ISR
    aliases without the penalty of an additional JMP/RJMP instruction.
    (Issue #765).

  - Support ISO/IEC TR 18037 functions rdivi, urdivi, lrdivi, ulrdivi (#999).

* Issues closed:

  - Since v2.2.0 (Issue #936), gcrt1.S defines symbols __DATA_REGION_ORIGIN__
    and __DATA_REGION_LENGTH__ to allow for more precise diagnostics from
    the linker when the data region overflows.  However, letting .data start
    at __DATA_REGION_ORIGIN__ is a relatively new addition in Binutils v2.40
    PR29741, whereas using __DATA_REGION_LENGTH__ for .data size is a much
    older addition.  Outcome may be that the linker script adopts the true
    size of .data but not its start address, resulting in incorrect errors
    from the linker (Issue #971).  In order to resolve #971, a configure
    test has been added that checks for PR29741, and only defines the mentioned
    symbols when PR29741 is available.  A similar test has been added for
    PR31177 which is a similar feature for the .text region.

  - On Reduced Tiny, add 0x4000 to the symbol address when
    pgm_get_far_address() takes the address of an object in PROGMEM_FAR.
    This works similar to how the compiler implements the &-operator
    for PROGMEM objects (Issue #970).

  - Define types from stdint.h like int32_t without attribute((mode)).
    (Issue #496)

  - ld: undefined reference to `E2END' #973