@@ -4,6 +4,10 @@
 
 * Improvements and additions:
 
+  - avr-gcc v15 and up issues a diagnostic for __int24 and __uint24 when
+    -pedantic or similar options are on.  Hence __extension__ was
+    added when using these types in avr/pgmspace.h.
+
   - common/asmdef.h used a sub-optimal definition of XJMP and XCALL (#993).
     Outcome was a sub-optimal code generation for some devices like the
     ones in avrxmega3/short-calls.
